# raw-term

./: .editorconfig  .gitignore  meson.build
src/: Application.vala  TermWindow.vala
src/widgets/: TerminalWidget.vala
src/windows/: TermWindow.vala
